feat: implement WeatherApiClient for weather forecast operations and enhance query handling with sortable unique ID

--- a/internalUsages/DcbOrleans.Web/DcbOrleans.Web.csproj
+++ b/internalUsages/DcbOrleans.Web/DcbOrleans.Web.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DcbOrleans.ServiceDefaults\DcbOrleans.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Dcb.Domain\Dcb.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Sekiban.Dcb\Sekiban.Dcb.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
