feat: update package versions to 1.0.2-preview01 across all projects and enhance project metadata

--- a/src/Sekiban.Dcb.Postgres/Sekiban.Dcb.Postgres.csproj
+++ b/src/Sekiban.Dcb.Postgres/Sekiban.Dcb.Postgres.csproj
@@ -2,9 +2,25 @@
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>latest</LangVersion>
+        <PackageId>Sekiban.Dcb.Postgres</PackageId>
+        <Version>1.0.2-preview01</Version>
+        <Authors>J-Tech Group</Authors>
+        <Company>J-Tech-Japan</Company>
+        <PackageDescription>Sekiban - Dynamic Consistency Boundary PostgreSQL Integration</PackageDescription>
+        <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
+        <PackageVersion>1.0.2-preview01</PackageVersion>
+        <Description>PostgreSQL event store and persistence layer for Sekiban DCB</Description>
+        <AssemblyName>Sekiban.Dcb.Postgres</AssemblyName>
+        <RootNamespace>Sekiban.Dcb.Postgres</RootNamespace>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GenerateSBOM>true</GenerateSBOM>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +34,11 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
+        <PackageReference Include="Microsoft.Sbom.Targets" Version="4.1.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
     <ItemGroup>
