--- a/internalUsages/DcbOrleans.ApiService/appsettings.Cosmos.json
+++ b/internalUsages/DcbOrleans.ApiService/appsettings.Cosmos.json
@@ -9,7 +9,13 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SekibanDcbCosmos": "[your cosmos connection string]"
+  },
   "Sekiban": {
-    "Database": "postgres"
+    "Database": "cosmos"
+  },
+  "CosmosDb": {
+    "DatabaseName": "SekibanDcb"
   }
 }
