--- a/src/Sekiban.Dcb.CosmosDb/Sekiban.Dcb.CosmosDb.csproj
+++ b/src/Sekiban.Dcb.CosmosDb/Sekiban.Dcb.CosmosDb.csproj
@@ -2,21 +2,25 @@
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
-        <Nullable>enable</Nullable>
+        <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <AssemblyName>Sekiban.Dcb.CosmosDb</AssemblyName>
+        <RootNamespace>Sekiban.Dcb.CosmosDb</RootNamespace>
+        <PackageId>Sekiban.Dcb.CosmosDb</PackageId>
+        <Version>1.0.2-preview01</Version>
+        <Authors>J-Tech Group</Authors>
+        <Company>J-Tech-Japan</Company>
+        <Copyright>Copyright (c) J-Tech-Japan 2025</Copyright>
+        <PackageDescription>Sekiban - Dynamic Consistency Boundary CosmosDB Integration</PackageDescription>
+        <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/J-Tech-Japan/Sekiban</PackageProjectUrl>
+        <PackageVersion>1.0.2-preview01</PackageVersion>
+        <Description>CosmosDB event store and persistence layer for Sekiban DCB</Description>
+        <PackageTags>event-sourcing;cqrs;ddd;dcb;sekiban;cosmosdb;azure</PackageTags>
         <AnalysisLevel>latest-All</AnalysisLevel>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <LangVersion>latest</LangVersion>
-        <VersionPrefix>1.0.2</VersionPrefix>
-        <VersionSuffix>preview01</VersionSuffix>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Authors>J-Tech International</Authors>
-        <Company>J-Tech International</Company>
-        <Product>Sekiban</Product>
-        <Description>Cosmos DB storage implementation for Sekiban DCB Event Sourcing Framework</Description>
-        <Copyright>J-Tech International</Copyright>
-        <PackageProjectUrl>https://github.com/J-Tech-Japan/Sekiban</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
