--- a/.github/workflows/packageMemStat.yml
+++ b/.github/workflows/packageMemStat.yml
@@ -21,11 +21,11 @@ jobs:
       run: |
         pushd ./
         dotnet nuget add source -n benchmarknightly https://www.myget.org/F/benchmarkdotnet/api/v3/index.json
-        dotnet restore Sekiban.sln
+        dotnet restore Sekiban.slnx
     - name: Build with dotnet
       run: |
         pushd ./
-        dotnet build Sekiban.sln -c Release
+        dotnet build Sekiban.slnx -c Release
     - name: Pack MemStat
       run: |
         dotnet nuget push "src/MemStat.Net/bin/Release/MemStat.Net.0.1.4.nupkg" --api-key ${{secrets.NUGET_APIKEY}}  --source https://api.nuget.org/v3/index.json
