feat: Add Azure Blob Storage integration and benchmark project

--- a/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
+++ b/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
@@ -22,6 +22,7 @@
     <ItemGroup>
         <ProjectReference Include="..\DcbOrleans.ApiService\DcbOrleans.ApiService.csproj"/>
         <ProjectReference Include="..\DcbOrleans.Web\DcbOrleans.Web.csproj"/>
+        <ProjectReference Include="..\DcbOrleans.Benchmark\DcbOrleans.Benchmark.csproj"/>
     </ItemGroup>
 
 </Project>
