--- a/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
+++ b/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
@@ -28,6 +28,7 @@
         <ProjectReference Include="..\DcbOrleans.ServiceDefaults\DcbOrleans.ServiceDefaults.csproj"/>
         <ProjectReference Include="..\..\src\Sekiban.Dcb\Sekiban.Dcb.csproj"/>
         <ProjectReference Include="..\..\src\Sekiban.Dcb.Orleans\Sekiban.Dcb.Orleans.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Dcb.BlobStorage.AzureStorage\Sekiban.Dcb.BlobStorage.AzureStorage.csproj"/>
         <ProjectReference Include="..\..\src\Sekiban.Dcb.Postgres\Sekiban.Dcb.Postgres.csproj"/>
         <ProjectReference Include="..\..\src\Sekiban.Dcb.CosmosDb\Sekiban.Dcb.CosmosDb.csproj"/>
         <ProjectReference Include="..\Dcb.Domain\Dcb.Domain.csproj"/>
