feat: Add GetWeatherForecastCountQuery and endpoint for weather forecast count retrieval

--- a/internalUsages/DcbOrleans.ApiService/appsettings.json
+++ b/internalUsages/DcbOrleans.ApiService/appsettings.json
@@ -1,11 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
+      "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning",
+      "Azure": "Warning",
       "Azure.Core": "Warning",
       "Azure.Storage": "Warning",
-      "Orleans.Streams": "Warning"
+      "Orleans": "Warning",
+      "Orleans.Streams": "Warning",
+      "DcbOrleans.ApiService": "Information"
     }
   },
   "AllowedHosts": "*",
