--- a/tests/Sekiban.Dcb.BlobStorage.AzureStorage.Unit/AppHost/Sekiban.Dcb.BlobStorage.AzureStorage.Unit.AppHost.csproj
+++ b/tests/Sekiban.Dcb.BlobStorage.AzureStorage.Unit/AppHost/Sekiban.Dcb.BlobStorage.AzureStorage.Unit.AppHost.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.4.1" />
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <OutputType>Exe</OutputType>
@@ -6,7 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.1" />
+    <PackageReference Include="Aspire.Hosting" Version="9.4.1" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="9.4.1" />
   </ItemGroup>
 </Project>
