--- a/internalUsages/DcbOrleans.ApiService/appsettings.Development.json
+++ b/internalUsages/DcbOrleans.ApiService/appsettings.Development.json
@@ -12,7 +12,8 @@
       "Orleans.Hosting": "Warning",
       "Orleans.AzureUtils": "Error",
       "Orleans.AzureUtils.AzureQueueDataManager": "Error",
-      "DcbOrleans.ApiService": "Information"
+      "DcbOrleans.ApiService": "Information",
+      "Sekiban.Dcb.Orleans": "Debug"
     }
   },
   "Orleans": {
