--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.ApiService/SekibanDcbOrleans.ApiService.csproj
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.ApiService/SekibanDcbOrleans.ApiService.csproj
@@ -24,11 +24,12 @@
   <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.2.1" />
   <PackageReference Include="Microsoft.Orleans.Streaming.AzureStorage" Version="9.2.1" />
   <PackageReference Include="Scalar.AspNetCore" Version="2.6.9" />
+  <PackageReference Include="Sekiban.Dcb.BlobStorage.AzureStorage" Version="1.0.2-preview04" />
   <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-  <PackageReference Include="Sekiban.Dcb" Version="1.0.2-preview03" />
-  <PackageReference Include="Sekiban.Dcb.Orleans" Version="1.0.2-preview03" />
-  <PackageReference Include="Sekiban.Dcb.Postgres" Version="1.0.2-preview03" />
-  <PackageReference Include="Sekiban.Dcb.CosmosDb" Version="1.0.2-preview03" />
+  <PackageReference Include="Sekiban.Dcb" Version="1.0.2-preview04" />
+  <PackageReference Include="Sekiban.Dcb.Orleans" Version="1.0.2-preview04" />
+  <PackageReference Include="Sekiban.Dcb.Postgres" Version="1.0.2-preview04" />
+  <PackageReference Include="Sekiban.Dcb.CosmosDb" Version="1.0.2-preview04" />
   <!-- Sekiban.Dcb.BlobStorage.AzureStorage package not yet published to NuGet; remove for now -->
   </ItemGroup>
 </Project>
