--- a/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.ApiService/SekibanDcbOrleans.ApiService.csproj
+++ b/templates/Sekiban.Dcb.Templates/content/Sekiban.Dcb.Orleans/SekibanDcbOrleans.ApiService/SekibanDcbOrleans.ApiService.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\SekibanDcbOrleans.ServiceDefaults\SekibanDcbOrleans.ServiceDefaults.csproj" />
   </ItemGroup>
   <ItemGroup>
+  <PackageReference Include="Microsoft.Extensions.Azure" Version="1.12.0" />
   <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.4.2" />
   <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.4.2" />
   <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.4.2" />
