Update Sekiban packages to version 1.0.2-preview08 and enhance logging in MultiProjectionGrain
- Updated Sekiban.Pure.CosmosDb, Sekiban.Pure.Orleans, Sekiban.Pure.Postgres, and related projects to version 1.0.2-preview08.
- Improved logging in MultiProjectionGrain to handle long LastSortableUniqueId values.
- Changed OrleansTagStatePersistent class from internal to public for better accessibility.
- Added MockBlobStorageSnapshotAccessor for testing purposes.
- Enhanced unit tests to include mock implementations and additional configurations for MultiProjectionGrain.
- Refactored tests to utilize new mock classes and improved event statistics handling.

--- a/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
+++ b/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
@@ -16,7 +16,9 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.8"/>
         <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.2.1" />
         <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Persistence.Cosmos" Version="9.2.1" />
         <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.2.1"/>
         <PackageReference Include="Microsoft.Orleans.Server" Version="9.2.1"/>
         <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.2.1"/>
