feat: Update test workflows to include additional test paths for DCB and Pure projects

--- a/.github/workflows/run_test_dcb.yml
+++ b/.github/workflows/run_test_dcb.yml
@@ -11,6 +11,10 @@ on:
       - 'src/Sekiban.Dcb.Orleans/**'
       - 'src/Sekiban.Dcb.Postgres/**'
       - 'src/Sekiban.Dcb.Postgres.MigrationHost/**'
+      - 'tests/Sekiban.Dcb.BlobStorage.AzureStorage.Unit/**'
+      - 'tests/Sekiban.Dcb.Orleans.Tests/**'
+      - 'tests/Sekiban.Dcb.Postgres.Tests/**'
+      - 'tests/Sekiban.Dcb.Tests/**'
 
 concurrency:
   group: DcbTestWorkflow
