Add support for executing commands and queries without ResultBox wrappers
- Introduced `ISekibanExecutorWithoutResult` interface to expose command and query operations without ResultBox.
- Implemented `OrleansDcbExecutorWithoutResult` and `InMemoryDcbExecutorWithoutResult` to handle execution without ResultBox.
- Created new command and query interfaces (`ICommandWithHandlerWithoutResult`, `IMultiProjectionQueryWithoutResult`, `IMultiProjectionListQueryWithoutResult`) for handling commands and queries directly.
- Updated existing query execution logic to support new interfaces and handle exceptions appropriately.
- Added configuration files for logging and Orleans settings.
- Implemented unit tests for the new executor functionality, ensuring commands and queries work as expected without ResultBox.
- Removed obsolete `SekibanOrleansExecutorWithoutResult` and its interface from the pure project.

--- a/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
+++ b/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
@@ -21,6 +21,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\DcbOrleans.ApiService\DcbOrleans.ApiService.csproj"/>
+        <ProjectReference Include="..\DcbOrleans.WithoutResult.ApiService\DcbOrleans.WithoutResult.ApiService.csproj"/>
         <ProjectReference Include="..\DcbOrleans.Web\DcbOrleans.Web.csproj"/>
         <ProjectReference Include="..\DcbOrleans.Benchmark\DcbOrleans.Benchmark.csproj"/>
     </ItemGroup>
