--- a/internalUsages/Dcb.Domain.WithoutResult/Dcb.Domain.WithoutResult.csproj
+++ b/internalUsages/Dcb.Domain.WithoutResult/Dcb.Domain.WithoutResult.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Sekiban.Dcb\Sekiban.Dcb.csproj" />
