--- a/internalUsages/Dcb.Domain/Dcb.Domain.csproj
+++ b/internalUsages/Dcb.Domain/Dcb.Domain.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Dcb.Domain</RootNamespace>
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
