--- a/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
+++ b/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
@@ -1,20 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>34e8262c-ed2c-453b-b399-8d2662dc3d88</UserSecretsId>
+        <LangVersion>default</LangVersion>
+        <TargetFrameworks>net10.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.4.2" />
-        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.4.2" />
-        <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.4.2" />
-        <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="9.4.2" />
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.2" />
+    <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.5.2" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0-rc.2"/>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.5.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.8"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Aspire.Azure.Data.Tables" Version="13.0.0" />
+        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="13.0.0" />
+        <PackageReference Include="Aspire.Azure.Storage.Queues" Version="13.0.0" />
+        <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="13.0.0" />
         <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.2.1"/>
         <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.2.1" />
         <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.2.1"/>
