--- a/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
+++ b/internalUsages/DcbOrleans.AppHost/DcbOrleans.AppHost.csproj
@@ -4,19 +4,20 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsAspireHost>true</IsAspireHost>
         <UserSecretsId>64845cd6-595d-452c-825b-063d4df00509</UserSecretsId>
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting" Version="9.4.2" />
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.2" />
-        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.4.2" />
-        <PackageReference Include="Aspire.Hosting.Orleans" Version="9.4.2" />
-        <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.4.2" />
+        <PackageReference Include="Aspire.Hosting" Version="13.0.0" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="13.0.0" />
+        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="13.0.0" />
+        <PackageReference Include="Aspire.Hosting.Orleans" Version="13.0.0" />
+        <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="13.0.0" />
     </ItemGroup>
 
     <ItemGroup>
