--- a/internalUsages/DcbOrleans.Benchmark/DcbOrleans.Benchmark.csproj
+++ b/internalUsages/DcbOrleans.Benchmark/DcbOrleans.Benchmark.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Net.Http.Json" Version="9.0.8" />
