--- a/internalUsages/DcbOrleans.ServiceDefaults/DcbOrleans.ServiceDefaults.csproj
+++ b/internalUsages/DcbOrleans.ServiceDefaults/DcbOrleans.ServiceDefaults.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsAspireSharedProject>true</IsAspireSharedProject>
+        <TargetFrameworks>net9.0;net10.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
