feat: Add support for .NET 10 in workflow files

--- a/.github/workflows/packagesDcb.yml
+++ b/.github/workflows/packagesDcb.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           dotnet-version: 9.0.x
 
+      - name: Setup .NET 10
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 10.0.x
+
       - name: Detect version from tag
         run: |
           TAG="${GITHUB_REF_NAME}"
