--- a/.github/workflows/packagesDcbTemplate.yml
+++ b/.github/workflows/packagesDcbTemplate.yml
@@ -13,6 +13,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
+    - name: Setup .NET 10
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 10.0.x
     - name: pack Template
       run: |
         pushd ./templates/Sekiban.Dcb.Templates
