--- a/.github/workflows/run_test_dcb.yml
+++ b/.github/workflows/run_test_dcb.yml
@@ -34,9 +34,14 @@ jobs:
         with:
           dotnet-version: 9.0.x
 
-      - name: dotnet build (net9.0)
+      - name: Setup .NET 10
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 10.0.x
+
+      - name: dotnet build
         run: |
-          dotnet build -c Release -p:GeneratePackageOnBuild=false -p:TargetFramework=net9.0 --verbosity minimal -m:1
+          dotnet build -c Release -p:GeneratePackageOnBuild=false --verbosity minimal -m:1
 
       - name: dotnet test DCB projects sequentially (net9.0)
         run: |
@@ -52,14 +57,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup .NET 9
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.0.x
+
       - name: Setup .NET 10
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 10.0.x
 
-      - name: dotnet build (net10.0)
+      - name: dotnet build
         run: |
-          dotnet build -c Release -p:GeneratePackageOnBuild=false -p:TargetFramework=net10.0 --verbosity minimal -m:1
+          dotnet build -c Release -p:GeneratePackageOnBuild=false --verbosity minimal -m:1
 
       - name: dotnet test DCB projects sequentially (net10.0)
         run: |
